# makedown

./: .gitignore  .gitmodules  CMakeLists.txt  build.zig  build.zig.zon  foo.md  test.md
include/: foo.h  lexer.h  makedown.h  parser.h  utils.h
src/: lexer.c  main.c  makedown.c
